--- a/Website_files/subsites/economie.html
+++ b/Website_files/subsites/economie.html
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" href="stylesheet1.css">
 
-<html>
+<html class="Economie">
     
     <header>
         <title>Economie</title>
