--- a/Website_files/subsites/godsdiensten.html
+++ b/Website_files/subsites/godsdiensten.html
@@ -9,7 +9,7 @@
     </header>
 
     <body>
-        <h1 class="backbutton"><a href="..\index.html">Return Home</a></h1>
+        <h1 class="backbutton"><a href="..\..\index.html">Return Home</a></h1>
         
     </body>
 
