changed return button to footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <li><a href="Website_files/subsites/godsdiensten.html">Godsdiensten</a></li>
             </ul>
         </nav>
+        <br>
+        <p class="introtext">Welkom bij de website van het fantasische utopische Pofferland!<br>Hier kan je alle informatie van ons fantasische landje vinden.</p>
+
     </body>
 
-    
 </html>
