--- a/Website_files/subsites/gezondheidszorg.html
+++ b/Website_files/subsites/gezondheidszorg.html
@@ -8,8 +8,8 @@
         <title>Gezondheidszorg</title>
     </header>
 
-    <body>
+    <footer>
         <h1 class="backbutton"><a href="..\..\index.html">Return Home</a></h1>
-    </body>
+    </footer>
 
 </html>
