--- a/Website_files/subsites/godsdiensten.html
+++ b/Website_files/subsites/godsdiensten.html
@@ -8,9 +8,9 @@
         <title>Godsdiensten</title>
     </header>
 
-    <body>
+    <footer>
         <h1 class="backbutton"><a href="..\..\index.html">Return Home</a></h1>
         
-    </body>
+    </footer>
 
 </html>
