--- a/Website_files/subsites/economie.html
+++ b/Website_files/subsites/economie.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="stylesheet1.css">
 
 <html class="Economie">
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     
     <header>
         <title>Economie</title>
