--- a/Website_files/subsites/techologie.html
+++ b/Website_files/subsites/techologie.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="stylesheet1.css">
 
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     
     <header>
         <title>Technologie</title>
