--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="stylesheet.css">
 
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
 
     <header>
         <title>Home</title>
@@ -16,8 +17,8 @@
                 <li><a href="Website_files/subsites/economie.html">Economie</a></li>
                 <li><a href="Website_files/subsites/staatsvorm.html">Staatsvorm</a></li>
                 <li><a href="Website_files/subsites/handhaving.html">Regels & Handhaving</a></li>
-                <li><a href="Website_files/subsites/milieu.html">Duurzaamheid & Milieu</a></li>
-                <li><a href="Website_files/subsites/gezondheidszorg.html">Gezondheidszorg</a></li>
+                <li><a href="Website_files/subsites/milieu.html">Milieu</a></li>
+                <li><a href="Website_files/subsites/gezondheidszorg.html">Zorg</a></li>
                 <li><a href="Website_files/subsites/onderwijs.html">Onderwijs</a></li>
                 <li><a href="Website_files/subsites/techologie.html">Technologie</a></li>
                 <li><a href="Website_files/subsites/godsdiensten.html">Godsdiensten</a></li>
