nav button bg added

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         
         <nav>
             <ul>
-                <li><a href="Website_files/subsites/economie.html">Economie</a></li>
-                <li><a href="Website_files/subsites/staatsvorm.html">Staatsvorm</a></li>
-                <li><a href="Website_files/subsites/handhaving.html">Regels & Handhaving</a></li>
-                <li><a href="Website_files/subsites/milieu.html">Milieu</a></li>
-                <li><a href="Website_files/subsites/gezondheidszorg.html">Zorg</a></li>
-                <li><a href="Website_files/subsites/onderwijs.html">Onderwijs</a></li>
-                <li><a href="Website_files/subsites/techologie.html">Technologie</a></li>
-                <li><a href="Website_files/subsites/godsdiensten.html">Godsdiensten</a></li>
+                <li class="economie"><a href="Website_files/subsites/economie.html">Economie</a></li>
+                <li class="staatsvorm"><a href="Website_files/subsites/staatsvorm.html">Staatsvorm</a></li>
+                <li class="handhaving"><a href="Website_files/subsites/handhaving.html">Regels & Handhaving</a></li>
+                <li class="milieu"><a href="Website_files/subsites/milieu.html">Milieu</a></li>
+                <li class="gezondheidszorg"><a href="Website_files/subsites/gezondheidszorg.html">Zorg</a></li>
+                <li class="onderwijs"><a href="Website_files/subsites/onderwijs.html">Onderwijs</a></li>
+                <li class="technologie"><a href="Website_files/subsites/techologie.html">Technologie</a></li>
+                <li class="godsdiensten"><a href="Website_files/subsites/godsdiensten.html">Godsdiensten</a></li>
             </ul>
         </nav>
         <br>
