--- a/Website_files/subsites/economie.html
+++ b/Website_files/subsites/economie.html
@@ -10,7 +10,7 @@
     </header>
 
     <footer>
-        <h1 class="backbutton"><a href="..\..\index.html">Return Home</a></h1>
+        <h1><a href="..\..\index.html" class="backbutton">Return Home</a></h1>
     </footer>
 
 </html>
