--- a/Website_files/subsites/milieu.html
+++ b/Website_files/subsites/milieu.html
@@ -2,7 +2,7 @@
 
 <link rel="stylesheet" href="stylesheet1.css">
 
-<html>
+<html class="Milieu">
     <meta name="viewport" content="width=device-width, initial-scale=1" /> 
     
     <header>
@@ -10,8 +10,7 @@
     </header>
 
     <footer>
-        <h1 class="backbutton"><a href="..\..\index.html">Return Home</a></h1>
-        
+        <h1><a href="..\..\index.html" class="backbutton">Return Home</a></h1>
     </footer>
 
 </html>
