update mobile safe

--- a/Website_files/subsites/godsdiensten.html
+++ b/Website_files/subsites/godsdiensten.html
@@ -19,7 +19,7 @@
         <p>In ons mooie land mag je geloven wat je wil, maar er zijn nog steeds goden.</p>
 
         <div class="Chris">
-            <img src="../images/god-chris-high.webp" alt="Chris HemsWorth">
+            <img src="../images/god-chris-high.jpg" alt="Chris HemsWorth">
             <H1>Chris HemsWorth</H1>
             <p>God van de het weer,  je kan hem herkennen aan zijn hamer want hij is overigens ook beschermer en schepper van de hamer.</p>
         </div>
@@ -27,7 +27,7 @@
         <br>
 
         <div class="Harry">
-            <img src="../images/Harry_God_Oogst.webp" alt="Harry Styles">
+            <img src="../images/Harry_God_Oogst.jpg" alt="Harry Styles">
             <h1>Harry Styles</h1>
             <p>Dit is de god van de oogst en landbouw, in het specifiek watermeloen, kers en kiwi.</p>
         </div>
