--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <br>
 
         <nav>
-            <ul>
+            <ul class="navlist">
                 <li class="economie"><a href="Website_files/subsites/economie.html">Economie</a></li>
                 <li class="staatsvorm"><a href="Website_files/subsites/staatsvorm.html">Staatsvorm</a></li>
-                <li class="handhaving"><a href="Website_files/subsites/handhaving.html">Regels & Handhaving</a></li>
+                <li class="handhaving"><a href="Website_files/subsites/handhaving.html">Handhaving</a></li>
                 <li class="milieu"><a href="Website_files/subsites/milieu.html">Milieu</a></li>
                 <li class="gezondheidszorg"><a href="Website_files/subsites/gezondheidszorg.html">Zorg</a></li>
                 <li class="onderwijs"><a href="Website_files/subsites/onderwijs.html">Onderwijs</a></li>
