scaling update + econimie info

--- a/Website_files/subsites/economie.html
+++ b/Website_files/subsites/economie.html
@@ -9,6 +9,42 @@
         <title>Economie</title>
     </header>
 
+    <body>
+        <p class="MainText">
+            <b class="ChapterTitle">De Economie</b><br>
+            Merel, Dimas & Sepp<br>
+            <br>
+            <b class="Subtitles">Regels</b><br>
+            In ons land zijn 500.000 inwoners, waarvan 140.000 jongeren onder de 18. Omdat ons land klein is, maken wij de belasting hoog en veel levensbenodigdheden gratis. Hier zijn een paar regels in onze gemengde economie, die combineert kapitalisme met socialisme.
+            
+            <br><br>
+            Je mag per jaar maar 1 ton aan durkies verdienen.
+            Je mag in totaal maar 1 miljoen durkies in bezit hebben. 
+            Op je vermogen zit ook belasting.
+            Water, Energie, basisonderwijs (basisschool en middelbare school) & zorg zijn allemaal gratis.
+            Vanaf je 18e is het verplicht om een studie of baan te hebben
+            Er is financiële steun voor studies beschikbaar.
+            Als er iemand overlijdt gaat de helft van zijn/haar geld naar de staat.
+            In totaal maken we gemiddeld 22.068.720.000 durkies.
+
+            <br><br>
+            <b class="Subtitles">Minimum en Maximum loon</b><br>
+            In ons land hebben we een minimum en maximum loon. Onze minimumloon is 16 (netto) durkies per uur in een 40 uur werkweek en onze maximumloon is 20 (netto) durkies per uur in een 40 uur werkweek. Een persoon mag maximaal 100.000 per jaar verdienen.
+            <br><br>
+
+            <b class="Subtitles">Belasting</b><br>
+            Wij hebben ook inkomstenbelasting en vermogensbelasting. Tot 50.000 durkies per jaar is de belasting 30% en van de 50.000 tot 100.000 is het 40%. Boven de 100.000 per jaar is de belasting 100%, dus gaat alles naar de staat boven de 100.000 durkies per jaar. Als je schuldig wordt bevonden van belastingontduiking, moet je één jaar 50% belasting betalen in plaats van 30% of 40%. De vermogensbelasting is 30% tot 500.000 en van 500.000 tot 1.000.000 is er 40%. Boven de 1.000.000 is er 100% vermogensbelasting.
+            <br><br>
+
+            <b class="Subtitles">Inwoner, leeftijd en baan</b><br>
+            Elke inwoner onder de 18 hoeft geen belasting te betalen. Als je 18 wordt moet je verplicht een baan hebben of een studie volgen, en moet je na je eerste werkjaar meteen belasting op je inkomen naar de overheid overmaken. 
+            <br><br>
+
+            <b class="Subtitles">Vergrijzing & pensionspotjes</b><br>
+            In ons land willen we vergrijzing tegengaan door een verplichte eutenasie in te voeren. Dat is bij de leeftijd van 80. Dat doen wij om het aantal pensioengerechtigden laag te houden zodat de premie voor de werkende laag blijft voor hun pensioen. Ook brengt vergrijzing het probleem van ouderenzorg. Alle extra voorzieningen, zoals bejaardentehuizen en de extra 
+            </p>
+    </body>
+
     <footer>
         <h1><a href="..\..\index.html" class="backbutton">Return Home</a></h1>
     </footer>
